Fix button sizes on profile page on mobile

--- a/src/modules/user/UserPage.module.scss
+++ b/src/modules/user/UserPage.module.scss
@@ -36,6 +36,10 @@
     border: none;
     box-shadow: none;
   }
+
+  a {
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
